feat: implement Set, Get, and SaveToFile with there tests

--- a/sample.ini
+++ b/sample.ini
@@ -1,7 +1,6 @@
-[      example ]
-key = value
-key2 = value
-
 [example2]
-key = value
-key2 = value
+key2=value
+key=value
+[example]
+key=diffente value
+key2=value
