fix: linter errcheck

--- a/file.ini
+++ b/file.ini
@@ -1,5 +1,7 @@
 [package name]
-name = ini parser
 file path = /pkg/ini.go
+name = ini parser
 [package version]
+file path = 
+name = 
 version = v1.0.0
