--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,25 @@
 name: Go
-
 on: [push, pull_request]
 
 
-
-    
 jobs:
 
   build:
-    
-
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Setup Go
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.21.0'
-     
+          go-version: '1.21'
 
+      - name: Install dependencies
+        run: go mod download
+
+
+      - name: Test with the Go CLI
+        run: go test -v ./...
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
-
