--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,38 @@
 name: Go
-on: [push, pull_request]
+on:  
+  push:
+    paths-ignore:
+      - 'README.md'
+
 
 
 jobs:
+  lint:
+      runs-on: ubuntu-latest
 
-  build:
-    runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - name: Setup Go
+          uses: actions/setup-go@v5
+          with:
+            go-version: '1.21'
 
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.21'
+        - name: Test with the Go CLI
+          run: go test -v ./...
 
-      - name: Install dependencies
-        run: go mod download
+        - name: golangci-lint
+          uses: golangci/golangci-lint-action@v6
 
+  test:
+      runs-on: ubuntu-latest
 
-      - name: Test with the Go CLI
-        run: go test -v ./...
+      steps:
+        - uses: actions/checkout@v4
+        - name: Setup Go
+          uses: actions/setup-go@v5
+          with:
+            go-version: '1.21'
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        - name: Test with the Go CLI
+          run: go test -v ./...
+
